added some more tests