@@ -2,26 +2,28 @@ package de.adorsys.ledgers.postings.impl.service;
 
 import de.adorsys.ledgers.postings.api.domain.*;
 import de.adorsys.ledgers.postings.db.domain.*;
-import de.adorsys.ledgers.postings.db.repository.LedgerAccountRepository;
-import de.adorsys.ledgers.postings.db.repository.LedgerRepository;
-import de.adorsys.ledgers.postings.db.repository.PostingLineRepository;
-import de.adorsys.ledgers.postings.db.repository.PostingRepository;
+import de.adorsys.ledgers.postings.db.repository.*;
+import de.adorsys.ledgers.util.exception.PostingErrorCode;
+import de.adorsys.ledgers.util.exception.PostingModuleException;
 import org.apache.commons.collections.CollectionUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import pro.javatar.commons.reader.YamlReader;
 
 import java.io.IOException;
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
@@ -31,6 +33,8 @@ class PostingServiceImplTest {
     private static final LocalDateTime DATE_TIME = LocalDateTime.now();
     private static final String NAME = "Mr. Jones";
     private static final String OP_ID = "OP_ID";
+
+    private final LedgerAccountBO account = readYml(LedgerAccountBO.class, "LedgerAccount.yml");
 
     @InjectMocks
     private PostingServiceImpl postingService;
@@ -42,6 +46,8 @@ class PostingServiceImplTest {
     private PostingLineRepository postingLineRepository;
     @Mock
     private LedgerAccountRepository ledgerAccountRepository;
+    @Mock
+    private AccountStmtRepository stmtRepository;
 
     @Test
     void newPosting() {
@@ -50,12 +56,29 @@ class PostingServiceImplTest {
                 .thenReturn(Optional.of(new Posting()));
         when(ledgerRepository.findById(any())).thenReturn(Optional.of(getLedger()));
         when(postingRepository.save(any())).thenAnswer(i -> i.getArguments()[0]);
+        when(postingRepository.findByOprIdAndDiscardingIdIsNull(any())).thenReturn(Optional.of(new Posting()));
+        when(ledgerAccountRepository.findById(any())).thenReturn(Optional.of(new LedgerAccount()));
 
         // When
-        PostingBO result = postingService.newPosting(getPostingBO());
+        PostingBO result = postingService.newPosting(getPostingBO(true));
 
         // Then
         assertNotNull(result);
+    }
+
+    @Test
+    void newPosting_line_balance_error() {
+        // Given
+        when(ledgerRepository.findById(any())).thenReturn(Optional.of(getLedger()));
+        when(postingRepository.save(any())).thenAnswer(i -> i.getArguments()[0]);
+        when(postingRepository.findByOprIdAndDiscardingIdIsNull(any())).thenReturn(Optional.of(new Posting()));
+
+        // When
+        PostingBO postingBO = getPostingBO(false);
+        PostingModuleException exception = assertThrows(PostingModuleException.class, () -> postingService.newPosting(postingBO));
+
+        // Then
+        assertSame(PostingErrorCode.DOBLE_ENTRY_ERROR, exception.getErrorCode());
     }
 
     @Test
@@ -76,13 +99,37 @@ class PostingServiceImplTest {
         when(postingLineRepository.findByAccountAndPstTimeGreaterThanAndPstTimeLessThanEqualAndDiscardedTimeIsNullOrderByPstTimeDesc(any(), any(), any()))
                 .thenReturn(Collections.singletonList(readYml(PostingLine.class, "PostingLine.yml")));
         when(ledgerAccountRepository.findById(any())).thenReturn(Optional.of(new LedgerAccount()));
-        LedgerAccountBO readYml = readYml(LedgerAccountBO.class, "LedgerAccount.yml");
 
         // When
-        List<PostingLineBO> result = postingService.findPostingsByDates(readYml, LocalDateTime.of(2018, 12, 12, 0, 0), LocalDateTime.of(2018, 12, 20, 0, 0));
+        List<PostingLineBO> result = postingService.findPostingsByDates(account, LocalDateTime.of(2018, 12, 12, 0, 0), LocalDateTime.of(2018, 12, 20, 0, 0));
 
         // Then
         assertTrue(CollectionUtils.isNotEmpty(result));
+    }
+
+    @Test
+    void findPostingLineById() {
+        when(ledgerAccountRepository.findById(any())).thenReturn(Optional.of(new LedgerAccount()));
+        when(postingLineRepository.findFirstByIdAndAccount(any(), any())).thenReturn(Optional.of(new PostingLine()));
+        PostingLineBO result = postingService.findPostingLineById(account, "tr1");
+        assertNotNull(result);
+    }
+
+    @Test
+    void findPostingLineById_posting_nf() {
+        when(ledgerAccountRepository.findById(any())).thenReturn(Optional.of(new LedgerAccount()));
+        when(postingLineRepository.findFirstByIdAndAccount(any(), any())).thenReturn(Optional.empty());
+        PostingModuleException exception = assertThrows(PostingModuleException.class, () -> postingService.findPostingLineById(account, "tr1"));
+        assertSame(PostingErrorCode.POSTING_NOT_FOUND, exception.getErrorCode());
+    }
+
+    @Test
+    void findPostingsByDatesPaged() {
+        when(ledgerAccountRepository.findById(any())).thenReturn(Optional.of(new LedgerAccount()));
+        when(postingLineRepository.findPostingsByAccountAndDates(any(), any(), any(), any())).thenReturn(new PageImpl<>(Collections.singletonList(new PostingLine())));
+        Page<PostingLineBO> result = postingService.findPostingsByDatesPaged(account, LocalDateTime.now().minusDays(1), LocalDateTime.now(), PageRequest.of(0, 1));
+        assertTrue(result.isFirst());
+        assertFalse(result.isEmpty());
     }
 
     private Posting getPosting() {
@@ -102,7 +149,7 @@ class PostingServiceImplTest {
         return p;
     }
 
-    private PostingBO getPostingBO() {
+    private PostingBO getPostingBO(boolean validLines) {
         PostingBO p = new PostingBO();
         p.setRecordUser("Record User");
         p.setAntecedentHash("Antecedent HASH");
@@ -113,10 +160,19 @@ class PostingServiceImplTest {
         p.setRecordTime(DATE_TIME);
         p.setPstType(PostingTypeBO.ADJ_TX);
         p.setPstStatus(PostingStatusBO.OTHER);
-        p.setLines(Collections.emptyList());
+        p.setLines(List.of(getLine(true, true), getLine(false, validLines)));
         p.setLedger(getLedgerBO());
         p.setOprType("Some type");
         return p;
+    }
+
+    private PostingLineBO getLine(boolean isDebitLine, boolean isValid) {
+        PostingLineBO line = new PostingLineBO();
+        line.setAccount(account);
+        line.setDebitAmount(isDebitLine && isValid ? BigDecimal.TEN : BigDecimal.ONE);
+        line.setCreditAmount(!isDebitLine && isValid ? BigDecimal.TEN : BigDecimal.ONE);
+        line.setPstTime(LocalDateTime.now().minusHours(1));
+        return line;
     }
 
     private static <T> T readYml(Class<T> aClass, String fileName) {
